Fixed issue with custom emoji drawer hiding even when clicking in the wrapper and hidden overflow issue

--- a/static/css/chat.css
+++ b/static/css/chat.css
@@ -33,6 +33,10 @@ html, body {
   border-top: 1px solid #333;
 }
 
+.chat-messages {
+  overflow: visible;
+}
+
 /* each chat message */
 .chat-message {
     position: relative;
@@ -124,6 +128,24 @@ html, body {
 
 /* Reactions */
 
+.custom-reaction-drawer {
+  position: absolute;
+  max-height: 410px;
+  min-height: 300px;
+  width: 390px;
+  top: 60px;
+  right: 0;
+  z-index: 9999;
+  overflow-y: auto;
+  flex-wrap: wrap;
+  gap: 6px;
+  padding: 10px;
+  background-color: #1a1a1a;
+  border: 1px solid #444;
+  border-radius: 6px;
+  box-shadow: 0 2px 12px rgb(0 0 0.5);
+}
+
 .custom-emoji {
     cursor: pointer;
 }
@@ -143,6 +165,8 @@ html, body {
 
 .emoji-reaction.custom{
     margin-right: 12px;
+    width: 36px;
+    height: 36px;
     cursor: pointer;
     border: none;
     margin-left: 0 !important;
@@ -437,20 +461,6 @@ html, body {
 
 .custom-wrapper-reaction {
   display: none;
-  position: absolute;
-  max-height: 410px;
-  min-height: 300px;
-  width: 360px;
-  top: 60px;
-  right: 0;
-  overflow-y: auto;
-  flex-wrap: wrap;
-  gap: 6px;
-  padding: 10px;
-  background-color: #1a1a1a;
-  border: 1px solid #444;
-  border-radius: 6px;
-  box-shadow: 0 2px 12px rgb(0 0 0.5);
 }
 
 .custom-wrapper-reaction.visible {
